--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 
 	<body> 
-		<h1>Hi everybody</h1>
+		<h1>Hi Everybody !</h1>
 		<style type="text/css">
 			h1
 			{
@@ -23,6 +23,5 @@
 			{
 				background: red;
 			}
-		</style>
 	</body>
 </html>
